# kerp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
core/: models.py
core/models/: __init__.py  basemodel.py  cnpjfield.py  cpffield.py  test_validators.py  validators.py
crm/: CONTEXT.md  PROMPT_TEMPLATE.md  admin.py  forms.py  urls.py  views.py
crm/forms/: __init__.py  contact_form.py  customer_forms.py
crm/migrations/: 0001_initial.py  0002_initial.py  0003_alter_contact_options_alter_customer_options_and_more.py
crm/models/: __init__.py  models.py
crm/templates/crm/: index.html  index_.html  index__.html
crm/templates/crm/contacts/: contact_list.html  create_contact.html  custom_form.html  update_contact.html
crm/templates/crm/customers/: create_customer.html  custom_form.html  customer_list.html  update_customer.html
crm/views/: __init__.py  contact.py  customer.py  views.py
docs/: architecture.md  readme.md
kerp/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  login.html  logout.html
templates/partials/: sidebar.html  topbar.html
users/: models.py
users/migrations/: 0001_initial.py
