[project]
name = "kerp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "crispy-tailwind>=1.0.3",
    "django>=6.0",
    "django-axes>=8.3.1",
    "django-crispy-forms>=2.6",
    "django-filter>=25.2",
    "django-htmx>=1.27.0",
    "django-simple-history>=3.11.0",
    "django-two-factor-auth>=1.18.1",
    "django-unfold>=0.87.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "python-money>=0.5",
    "redis>=7.4.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
]
